--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Bets_CI_1</groupId>
-	<artifactId>Bets_CI_1</artifactId>
+	<artifactId>ISBets21MAUBRY</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
