--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         #run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report install sonar:sonar 
-         mvn  -Dsonar.projectKey=ISBets21BRYMAUJOR clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report install clean test sonar:sonar
+         run: mvn  -Dsonar.projectKey=ISBets21BRYMAUJOR clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report install clean test sonar:sonar
         
